added scene builder screens and added MainApp to change scenes between .fxml. Added Controller classes for the function of the Screens and completed Generate Workout page. fixed pom.xml issue